<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_in">Sign in</string>
    <string name="enter_your_phone">For the beginning enter your phone number</string>
    <string name="hint_of_create_account">If you haven\'t got an account we will suggest you to create it</string>
    <string name="phone_number">Phone number</string>

    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="we_glad_to_see_you">We glad to see you!</string>
    <string name="code">Code</string>
    <string name="enter_code_from_messages" tools:ignore="TypographyQuotes">
        <![CDATA[Enter code from messages we have sent to <br><font color="#FFFFFF">%1$s</font></br>]]>
    </string>

    <string name="what_is_your_name">What\'s your name?</string>
    <string name="enter_your_name_and_nickname">Enter your name and nickname</string>
    <string name="name_and_surname">Name &amp; surname</string>
    <string name="nickname">Nickname</string>
    <string name="about_name">Don\'t worry, it\'s the last step</string>

    <string name="too_many_requests">Exceeded limit of requests</string>
    <string name="wrong_phone_format">Wrong phone number format</string>
    <string name="unknown_error">Unknown error</string>
</resources>