<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SudoxTheme.Auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/SudoxTheme.Auth.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back" />

    <TextView
        style="@style/SudoxTheme.Auth.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_glad_to_see_you" />

    <com.sudox.design.widgets.etlayout.EditTextLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:inputType="number"
            tools:ignore="Autofill" />

    </com.sudox.design.widgets.etlayout.EditTextLayout>

    <TextView
        style="@style/SudoxTheme.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_from_messages" />
</LinearLayout>