<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SudoxTheme.Auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/SudoxTheme.Auth.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <TextView
        style="@style/SudoxTheme.Auth.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone" />

    <com.sudox.design.widgets.etlayout.EditTextLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/authPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:ignore="Autofill" />

    </com.sudox.design.widgets.etlayout.EditTextLayout>

    <TextView
        style="@style/SudoxTheme.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_of_create_account" />
</LinearLayout>